--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "d3": "^4.11.0",
     "d3-geo": "^1.9.0",
     "d3-geo-projection": "^2.3.1",
+    "d3-request": "^1.0.6",
     "regl": "^1.3.0"
   },
   "devDependencies": {
